@@ -375,3 +375,7 @@
 2018-06-02 Fred Gleason <fredg@paravelsystems.com>
 	* Incremented the library version to 8:2:5.
 	* Incremented the package version to 1.5.2.
+2018-06-03 Fred Gleason <fredg@paravelsystems.com>
+	* Added a 'WHWifiConnection' class.
+	* Added a 'WHCgiPost::wifiActive()' method.
+	* Added a 'WHCgiWifiConnections()' method.
